fix(frontend): better handle todo text overflow

--- a/frontend_lib/src/component/ToDo/ToDo.styl
+++ b/frontend_lib/src/component/ToDo/ToDo.styl
@@ -42,11 +42,11 @@
       outline none
     &__content
       flex 1
-      display flex
-      overflow-wrap anywhere
       align-items baseline
+      overflow
+      text-overflow ellipsis
       & strong
-        margin textSpacing
+        margin-right textSpacing
     &Checked
       color lightDarkGrey
       & > button
